version/0.18/_sources/examples/legacy_standalone/06_Advanced_EDB.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "examples\legacy_standalone\06_Advanced_EDB.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_examples_legacy_standalone_06_Advanced_EDB.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_examples_legacy_standalone_06_Advanced_EDB.py:


EDB: parametric via creation
----------------------------
This example shows how you can use EDB to create a layout.

.. GENERATED FROM PYTHON SOURCE LINES 29-32

Perform required imports
~~~~~~~~~~~~~~~~~~~~~~~~
Perform required imports.

.. GENERATED FROM PYTHON SOURCE LINES 32-45

.. code-block:: Python


    import os

    import numpy as np

    import pyedb
    from pyedb.generic.general_methods import (
        generate_unique_folder_name,
        generate_unique_name,
    )

    aedb_path = os.path.join(generate_unique_folder_name(), generate_unique_name("via_opt") + ".aedb")








.. GENERATED FROM PYTHON SOURCE LINES 46-50

Create stackup
~~~~~~~~~~~~~~
The ``StackupSimple`` class creates a stackup based on few inputs. This stackup
is used later.

.. GENERATED FROM PYTHON SOURCE LINES 53-56

Create ground plane
~~~~~~~~~~~~~~~~~~~
Create a ground plane on specific layers.

.. GENERATED FROM PYTHON SOURCE LINES 56-64

.. code-block:: Python



    def _create_ground_planes(edb, layers):
        plane = edb.modeler.Shape("rectangle", pointA=["-3mm", "-3mm"], pointB=["3mm", "3mm"])
        for i in layers:
            edb.modeler.create_polygon(plane, i, net_name="GND")









.. GENERATED FROM PYTHON SOURCE LINES 65-68

Create EDB
~~~~~~~~~~
Create EDB. If the path doesn't exist, PyAEDT automatically generates a new AEDB folder.

.. GENERATED FROM PYTHON SOURCE LINES 68-71

.. code-block:: Python


    edb = pyedb.Edb(edbpath=aedb_path, edbversion="2024.1")



.. rst-class:: sphx-glr-script-out

.. code-block:: pytb

    Traceback (most recent call last):
      File "C:\actions-runner\_work\pyedb\pyedb\examples\legacy_standalone\06_Advanced_EDB.py", line 69, in <module>
        edb = pyedb.Edb(edbpath=aedb_path, edbversion="2024.1")
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\generic\design_types.py", line 108, in Edb
        from pyedb.dotnet.edb import Edb as app
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\dotnet\edb.py", line 115, in <module>
        from pyedb.workflow import Workflow
      File "C:\actions-runner\_work\pyedb\pyedb\.venv\lib\site-packages\pyedb\workflow.py", line 4, in <module>
        import pandas as pd
    ModuleNotFoundError: No module named 'pandas'




.. GENERATED FROM PYTHON SOURCE LINES 72-75

Create stackup layers
~~~~~~~~~~~~~~~~~~~~~
Create stackup layers.

.. GENERATED FROM PYTHON SOURCE LINES 75-96

.. code-block:: Python


    layout_count = 12
    diel_material_name = "FR4_epoxy"
    diel_thickness = "0.15mm"
    cond_thickness_outer = "0.05mm"
    cond_thickness_inner = "0.017mm"
    soldermask_thickness = "0.05mm"
    trace_in_layer = "TOP"
    trace_out_layer = "L10"
    gvia_num = 10
    gvia_angle = 30
    edb.stackup.create_symmetric_stackup(
        layer_count=layout_count,
        inner_layer_thickness=cond_thickness_inner,
        outer_layer_thickness=cond_thickness_outer,
        soldermask_thickness=soldermask_thickness,
        dielectric_thickness=diel_thickness,
        dielectric_material=diel_material_name,
    )



.. GENERATED FROM PYTHON SOURCE LINES 97-101

Create variables
~~~~~~~~~~~~~~~~
Create all variables. If a variable has a ``$`` prefix, it is a project variable.
Otherwise, is a design variable.

.. GENERATED FROM PYTHON SOURCE LINES 101-111

.. code-block:: Python


    giva_angle_rad = gvia_angle / 180 * np.pi

    edb["$via_hole_size"] = "0.3mm"
    edb["$antipaddiam"] = "0.7mm"
    edb["$paddiam"] = "0.5mm"
    edb.add_design_variable("via_pitch", "1mm", is_parameter=True)
    edb.add_design_variable("trace_in_width", "0.2mm", is_parameter=True)
    edb.add_design_variable("trace_out_width", "0.1mm", is_parameter=True)


.. GENERATED FROM PYTHON SOURCE LINES 112-116

Create definitions
~~~~~~~~~~~~~~~~~~
Create two definitions, one for the ground and one for the signal. The definitions
are parametric.

.. GENERATED FROM PYTHON SOURCE LINES 116-127

.. code-block:: Python


    edb.padstacks.create(
        padstackname="SVIA",
        holediam="$via_hole_size",
        antipaddiam="$antipaddiam",
        paddiam="$paddiam",
        start_layer=trace_in_layer,
        stop_layer=trace_out_layer,
    )
    edb.padstacks.create(padstackname="GVIA", holediam="0.3mm", antipaddiam="0.7mm", paddiam="0.5mm")


.. GENERATED FROM PYTHON SOURCE LINES 128-131

Place padstack for signal
~~~~~~~~~~~~~~~~~~~~~~~~~
Place the padstack for the signal.

.. GENERATED FROM PYTHON SOURCE LINES 131-134

.. code-block:: Python


    edb.padstacks.place([0, 0], "SVIA", net_name="RF")


.. GENERATED FROM PYTHON SOURCE LINES 135-139

Place padstack for ground
~~~~~~~~~~~~~~~~~~~~~~~~~
Place the padstack for the  ground. A loop iterates and places multiple ground
vias on different positions.

.. GENERATED FROM PYTHON SOURCE LINES 139-165

.. code-block:: Python


    gvia_num_side = gvia_num / 2

    if gvia_num_side % 2:
        # Even number of ground vias on each side
        edb.padstacks.place(["via_pitch", 0], "GVIA", net_name="GND")
        edb.padstacks.place(["via_pitch*-1", 0], "GVIA", net_name="GND")
        for i in np.arange(1, gvia_num_side / 2):
            xloc = "{}*{}".format(np.cos(giva_angle_rad * i), "via_pitch")
            yloc = "{}*{}".format(np.sin(giva_angle_rad * i), "via_pitch")
            edb.padstacks.place([xloc, yloc], "GVIA", net_name="GND")
            edb.padstacks.place([xloc, yloc + "*-1"], "GVIA", net_name="GND")

            edb.padstacks.place([xloc + "*-1", yloc], "GVIA", net_name="GND")
            edb.padstacks.place([xloc + "*-1", yloc + "*-1"], "GVIA", net_name="GND")
    else:
        # Odd number of ground vias on each side
        for i in np.arange(0, gvia_num_side / 2):
            xloc = "{}*{}".format(np.cos(giva_angle_rad * (i + 0.5)), "via_pitch")
            yloc = "{}*{}".format(np.sin(giva_angle_rad * (i + 0.5)), "via_pitch")
            edb.padstacks.place([xloc, yloc], "GVIA", net_name="GND")
            edb.padstacks.place([xloc, yloc + "*-1"], "GVIA", net_name="GND")

            edb.padstacks.place([xloc + "*-1", yloc], "GVIA", net_name="GND")
            edb.padstacks.place([xloc + "*-1", yloc + "*-1"], "GVIA", net_name="GND")


.. GENERATED FROM PYTHON SOURCE LINES 166-169

Generate traces
~~~~~~~~~~~~~~~
Generate and place parametric traces.

.. GENERATED FROM PYTHON SOURCE LINES 169-188

.. code-block:: Python


    edb.modeler.create_trace(
        [[0, 0], [0, "-3mm"]],
        layer_name=trace_in_layer,
        net_name="RF",
        width="trace_in_width",
        start_cap_style="Flat",
        end_cap_style="Flat",
    )

    edb.modeler.create_trace(
        [[0, 0], [0, "3mm"]],
        layer_name=trace_out_layer,
        net_name="RF",
        width="trace_out_width",
        start_cap_style="Flat",
        end_cap_style="Flat",
    )


.. GENERATED FROM PYTHON SOURCE LINES 189-192

Generate ground layers
~~~~~~~~~~~~~~~~~~~~~~
Generate and place ground layers.

.. GENERATED FROM PYTHON SOURCE LINES 192-198

.. code-block:: Python


    ground_layers = [i for i in edb.stackup.signal_layers.keys()]
    ground_layers.remove(trace_in_layer)
    ground_layers.remove(trace_out_layer)
    _create_ground_planes(edb=edb, layers=ground_layers)


.. GENERATED FROM PYTHON SOURCE LINES 199-202

Plot Layout
~~~~~~~~~~~
Generate and plot the layout.

.. GENERATED FROM PYTHON SOURCE LINES 202-207

.. code-block:: Python


    # edb.nets.plot(layers=["TOP", "L10"])
    edb.stackup.plot(plot_definitions=["GVIA", "SVIA"])



.. GENERATED FROM PYTHON SOURCE LINES 208-211

Save EDB and close
~~~~~~~~~~~~~~~~~~
Save EDB and close.

.. GENERATED FROM PYTHON SOURCE LINES 211-216

.. code-block:: Python


    edb.save_edb()
    edb.close_edb()

    print("aedb Saved in {}".format(aedb_path))


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.016 seconds)


.. _sphx_glr_download_examples_legacy_standalone_06_Advanced_EDB.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 06_Advanced_EDB.ipynb <06_Advanced_EDB.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 06_Advanced_EDB.py <06_Advanced_EDB.py>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
